--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,333 @@
-Django==5.2.4
-asgiref==3.9.1
-sqlparse==0.5.3
-tzdata==2025.2
-typing-extensions==4.14.1
-razorpay==1.4.2
+absl-py==2.1.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+aniso8601==10.0.1
+annotated-types==0.7.0
+anyascii==0.3.2
+anyio==4.8.0
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==25.1.0
+audioread==3.0.1
+av==11.0.0
+babel==2.17.0
+backoff==2.2.1
+bangla==0.0.2
+bcrypt==3.2.1
+beautifulsoup4==4.13.4
+bidict==0.23.1
+blinker==1.9.0
+blis==1.2.0
+bnnumerizer==0.0.2
+bnunicodenormalizer==0.1.7
+build==1.2.2.post1
+cachetools==5.5.2
+catalogue==2.0.10
+certifi==2024.12.14
+cffi==1.17.1
+channels==4.2.2
+chardet==5.2.0
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+click==8.1.8
+cloudpathlib==0.20.0
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.9.0
+confection==0.1.5
+contourpy==1.2.1
+coqpit==0.0.17
+coqpit-config==0.2.0
+coqui-tts==0.24.1
+coqui-tts-trainer==0.2.3
+cryptography==44.0.2
+cssselect==1.3.0
+cssutils==2.11.1
+ctranslate2==4.5.0
+cycler==0.12.1
+cymem==2.0.11
+Cython==3.0.12
+dataclasses-json==0.6.7
+dateparser==1.1.8
+decorator==5.2.1
+Deprecated==1.2.18
+distlib==0.3.9
+distro==1.9.0
+Django==5.2
+django-admin-interface==0.30.0
+django-colorfield==0.13.0
+django-jazzmin==3.0.1
+dnspython==2.7.0
+docopt==0.6.2
+durationpy==0.9
+easyocr==1.7.1
+einops==0.8.1
+emoji==2.14.0
+encodec==0.1.1
+enum34==1.1.10
+et_xmlfile==2.0.0
+eventlet==0.40.2
+exceptiongroup==1.2.2
+fastapi==0.115.11
+faster-whisper==1.0.0
+filelock==3.17.0
+Flask==2.2.3
+Flask-Bcrypt==1.0.1
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.7.1
+Flask-Login==0.6.3
+Flask-RESTful==0.3.10
+Flask-SocketIO==5.3.2
+Flask-SQLAlchemy==3.1.1
+flatbuffers==25.2.10
+fonttools==4.56.0
+fpdf==1.7.2
+frozenlist==1.5.0
+fsspec==2025.2.0
+ftfy==6.3.1
+g2pkk==0.1.2
+gevent==22.10.2
+gevent-websocket==0.10.1
+google-auth==2.38.0
+googleapis-common-protos==1.69.1
+GPUtil==1.4.0
+greenlet==3.1.1
+grpcio==1.70.0
+gruut==2.2.3
+gruut-ipa==0.13.0
+gruut_lang_de==2.0.1
+gruut_lang_en==2.0.1
+gruut_lang_es==2.0.1
+gruut_lang_fr==2.0.2
+h11==0.14.0
+halo==0.0.31
+hangul-romanize==0.1.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.29.1
+humanfriendly==10.0
+idna==3.10
+imageio==2.37.0
+imagesize==1.4.1
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+inflect==7.5.0
+intel-openmp==2021.4.0
+itsdangerous==2.2.0
+jamo==0.4.1
+jieba==0.42.1
+Jinja2==3.1.5
+jiter==0.9.0
+joblib==1.4.2
+jsonlines==1.2.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jwt==1.3.1
+keyboard==0.13.5
+kiwisolver==1.4.8
+kubernetes==32.0.1
+langchain==0.3.20
+langchain-community==0.3.18
+langchain-core==0.3.69
+langchain-ollama==0.2.3
+langchain-openai==0.3.28
+langchain-text-splitters==0.3.6
+langcodes==3.5.0
+langsmith==0.3.45
+language_data==1.3.0
+lazy_loader==0.4
+librosa==0.10.0
+llvmlite==0.43.0
+log-symbols==0.0.14
+lxml==5.3.1
+marisa-trie==1.2.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.8.4
+mdurl==0.1.2
+mkl==2021.4.0
+mmh3==5.1.0
+monotonic==1.6
+more-itertools==10.6.0
+mpmath==1.3.0
+msgpack==1.1.0
+mss==10.0.0
+multidict==6.1.0
+murmurhash==1.0.12
+mypy-extensions==1.0.0
+networkx==3.4.2
+ninja==1.11.1.3
+nltk==3.9.1
+num2words==0.5.14
+numba==0.60.0
+numpy==1.24.4
+oauthlib==3.2.2
+ollama==0.4.7
+onnxruntime==1.20.1
+openai==1.97.0
+opencv-contrib-python==4.10.0.84
+opencv-python==4.12.0.88
+opencv-python-headless==4.11.0.86
+openpyxl==3.1.5
+opentelemetry-api==1.31.0
+opentelemetry-exporter-otlp-proto-common==1.31.0
+opentelemetry-exporter-otlp-proto-grpc==1.31.0
+opentelemetry-instrumentation==0.52b0
+opentelemetry-instrumentation-asgi==0.52b0
+opentelemetry-instrumentation-fastapi==0.52b0
+opentelemetry-proto==1.31.0
+opentelemetry-sdk==1.31.0
+opentelemetry-semantic-conventions==0.52b0
+opentelemetry-util-http==0.52b0
+openwakeword==0.6.0
+opt-einsum==3.3.0
+orjson==3.10.15
+overrides==7.7.0
+packaging==24.2
+paddleocr==3.1.0
+paddlepaddle==3.1.0
+paddlex==3.1.3
+pandas==1.5.3
+pdfminer.six==20231228
+pdfplumber==0.11.5
+pillow==11.1.0
+platformdirs==4.3.6
+pooch==1.8.2
+posthog==3.20.0
+premailer==3.10.0
+preshed==3.0.9
+prettytable==3.16.0
+propcache==0.3.0
+protobuf==5.29.3
+psutil==7.0.0
+pulsar-client==3.6.1
+pvporcupine==1.9.5
+py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+PyAudio==0.2.14
+PyAutoGUI==0.9.54
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.8.0
+pydantic_core==2.27.2
+pydub==0.25.1
+Pygments==2.19.1
+PyJWT==2.8.0
+pynndescent==0.5.13
+pyparsing==3.2.1
+pypdfium2==4.30.1
+PyPika==0.48.9
+pypinyin==0.53.0
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+pysbd==0.3.4
+pytesseract==0.3.13
+python-bidi==0.6.6
+python-crfsuite==0.9.11
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-docx==1.1.2
+python-dotenv==1.0.0
+python-engineio==4.3.4
+python-slugify==8.0.4
+python-socketio==5.7.2
+pytz==2025.1
+pywin32==310
+PyYAML==6.0.2
+rapidfuzz==3.9.0
+razorpay==1.4.2
+RealtimeSTT==0.2.1
+realtimetts==0.4.50
+regex==2024.11.6
+requests==2.29.0
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+resampy==0.4.3
+rich==13.9.4
+rsa==4.9
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+safetensors==0.5.2
+scikit-image==0.25.2
+scikit-learn==1.6.1
+scipy==1.11.4
+shapely==2.0.7
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+sounddevice==0.5.1
+soundfile==0.13.1
+soupsieve==2.7
+soxr==0.5.0.post1
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+spinners==0.0.24
+SQLAlchemy==2.0.37
+sqlparse==0.5.3
+srsly==2.5.1
+stanza==1.9.2
+starlette==0.46.0
+stream2sentence==0.3.0
+SudachiDict-core==20250129
+SudachiPy==0.6.10
+sympy==1.13.1
+tbb==2021.13.1
+tenacity==9.0.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+termcolor==2.5.0
+text-unidecode==1.3
+thinc==8.3.4
+threadpoolctl==3.5.0
+tifffile==2025.3.13
+tiktoken==0.9.0
+tokenizers==0.21.2
+tomli==2.2.1
+torch==2.1.2
+torchaudio==2.3.1
+torchvision==0.16.2
+tqdm==4.67.1
+trainer==0.0.36
+transformers==4.40.2
+TTS==0.22.0
+typeguard==4.4.2
+typer==0.15.2
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3
+ujson==5.10.0
+umap-learn==0.5.7
+Unidecode==1.3.8
+urllib3==1.26.20
+uv==0.7.3
+uvicorn==0.34.0
+virtualenv==20.29.2
+wasabi==1.1.3
+watchfiles==1.0.4
+wcwidth==0.2.13
+weasel==0.4.1
+webrtcvad==2.0.10
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==2.2.3
+wget==3.2
+whisper==1.1.10
+wrapt==1.17.2
+yarl==1.18.3
+yt-dlp==2025.6.30
+ytmusicapi==1.7.0
+zipp==3.21.0
+zope.event==5.1
+zope.interface==7.2
+zstandard==0.23.0
